--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,6 @@
-DB_HOST=url-url-shortener-postgres
-DB_DRIVER=postgres
-DB_USER=postgres
-DB_PASS=password
-DB_NAME=url_shortener
-DB_PORT=5432
+DB_HOST="url-url-shortener-postgres"
+DB_DRIVER="postgres"
+DB_USER="postgres"
+DB_NAME="url_shortener"
+DB_PORT="5432"
 
