--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,9 @@
-DB_HOST="url-url-shortener-postgres"
+DB_HOST="localhost"
 DB_DRIVER="postgres"
+DB_PASSWORD="test"
 DB_USER="postgres"
 DB_NAME="url_shortener"
 DB_PORT="5432"
+APP_PORT= ":3000"
+
 
