--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,20 +1,51 @@
+# FROM golang:alpine as builder
+
+# RUN apk update && apk add --no-cache git
+
+# WORKDIR /app
+
+# COPY go.mod go.sum ./
+
+
+# RUN go mod download 
+
+# COPY . .
+
+# FROM alpine:latest
+# RUN apk --no-cache add ca-certificates
+
+# WORKDIR /root/
+
+# COPY --from=builder /app/main .
+# COPY --from=builder /app/.env .  
+
 FROM golang:alpine as builder
 
-RUN apk update && apk add --no-cache git
+RUN mkdir /build
+
+ADD . /build/
+
+WORKDIR /build
+
+RUN go build -o main .
+
+#stage 2
+
+FROM alpine
+
+RUN adduser -S -D -H  -h /app appuser
+
+USER appuser
+
+COPY . /app
+
+COPY --from=builder /build/main /app/
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+EXPOSE 3000
+
+CMD ["./main"]
 
 
-RUN go mod download 
 
-COPY . .
-
-FROM alpine:latest
-RUN apk --no-cache add ca-certificates
-
-WORKDIR /root/
-
-COPY --from=builder /app/main .
-COPY --from=builder /app/.env .  
