--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,50 @@
-version: '3'
+# version: '3'
+# services:
+#   app:
+#     container_name: url_api
+#     build: .
+#     ports: 
+#       - :3000
+#     restart: on-failure
+#     volumes:
+#       - api:/usr/src/app/
+#     depends_on:
+#       - postgres          
+
+
+
+#   postgres:
+#     image: postgres:latest
+#     container_name: full_db_postgres
+#     environment:
+#       - POSTGRES_USER=${DB_USER}  
+#       - POSTGRES_DB=${DB_NAME}
+#       - DATABASE_HOST=${DB_HOST} 
+#     ports:
+#       - '5432:5432'
+#     volumes:
+#       - database_postgres:/var/lib/postgresql/data
+
+#     env_file:
+#       - config/.env
+
+
+# volumes:
+#   api:
+#   database_postgres: 
+
+version: "2"
+
 services:
-  app:
-    container_name: url_api
-    build: .
-    ports: 
-      - 8080:8080 
-    restart: on-failure
-    volumes:
-      - api:/usr/src/app/
-    depends_on:
-      - postgres          
-    networks:
-      - url-shortener
-
-
-  url-shortener-postgres:
-    image: postgres:latest
-    container_name: full_db_postgres
-    environment:
-      - POSTGRES_USER=${DB_USER}  
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST} 
-    ports:
-      - '5432:5432'
-    volumes:
-      - database_postgres:/var/lib/postgresql/data
-    networks:
-      - url-shortener
-    
-
-
-volumes:
   api:
-  database_postgres: 
+    build: api
+    ports:
+      - "8000:3000"
+    depends_on:
+      - db
+  db:
+    build: db
+    ports:
+      - "5432:5432"
+    volumes:
+      - .data:/data
